--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Lean Canvas Webであなたの</br>
+	ビジネスモデルをリアルタイムに</br>
+	更新、共有することができます。</h1>
